third_party/rust/chromium_crates_io/vendor/zerocopy-0.8.23/tests/ui-msrv/diagnostic-not-implemented-immutable.stderr
error[E0277]: the trait bound `NotZerocopy: zerocopy::Immutable` is not satisfied
  --> tests/ui-msrv/diagnostic-not-implemented-immutable.rs:18:23
   |
18 |     takes_immutable::<NotZerocopy>();
   |                       ^^^^^^^^^^^ the trait `zerocopy::Immutable` is not implemented for `NotZerocopy`
   |
note: required by a bound in `takes_immutable`
  --> tests/ui-msrv/diagnostic-not-implemented-immutable.rs:21:23
   |
21 | fn takes_immutable<T: Immutable>() {}
   |                       ^^^^^^^^^ required by this bound in `takes_immutable`
